# librari

./: Cargo.toml  README.md
assets/: modern-normalize.css  page.css
src/: library.rs  main.rs  templates.rs  utils.rs
templates/: base.html  book_index.html  home.html  index.html  nav_point.html  page.html
