[package]
name = "librari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
epub = "2.1.1"
rusqlite = "0.30.0"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.4.0"
